# 08-mg-team-08-mg

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/: config.txt  dirichlet_boundary.txt
doc/: results.txt
include/: PoissonSolver.h  PoissonSolver.hpp  PoissonSolverParallel.h  PoissonSolverParallel.hpp  plot.hpp  plot_errors.hpp
lib/: PoissonSolver.cpp  PoissonSolverParallel.cpp
src/: PoissonSolver.cpp  PoissonSolver.h  PoissonSolverParallel.cpp  main.cpp  plot.cpp  plot_errors.cpp
